--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
 @import "tailwindcss";
 @theme {
   --color-lighting: #f2f6f9;
@@ -5,24 +7,41 @@
   --color-shiny:#0aa6d7;
   --color-stroke:#7acde9;
   --color-older:#f1f7f7;
+  --color-off:#f4f5f5;
+  --color-eclipse:#ef5c72;
   --font-inter: "Inter", "sans-serif";
   --font-courgette: "Courgette", "cursive";
-}
-html {
-  scroll-behavior: smooth;
+  --breakpoint-3xl:1680px;
 }
 
-body{
+body,html{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    position: relative;
     font-family: 'Inter', sans-serif;
+    scroll-behavior: auto;
+    scroll-behavior: smooth;
+    scroll-snap-type: none;
+  }
+  body::-webkit-scrollbar {
+    display: none;
+  }
+
+html {
+  scroll-snap-type: y mandatory;
 }
+
+main {
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
+}
+
 .hero-bg{
     background-image:url("./images/hero-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position:center;
 }
 .about-bg{
     background-image:url("./images/abstract/icon-dotted-map-2.png");
@@ -30,18 +49,24 @@ body{
     background-size: cover;
     background-position: center;
 }
+.comment-bg{
+  background-image:url("./images/abstract/cover-comment.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 
 @keyframes floatAnimation {
     0%, 100% {
-      transform: translateY(-20px);
+      transform: translateY(-10px);
     }
     50% {
-      transform: translateY(30px);
+      transform: translateY(20px);
     }
   }
   
   .animated {
-    animation: floatAnimation 10s ease-in-out infinite;
+    animation: floatAnimation 5s ease-in-out infinite;
   }
 
   @keyframes rightAnimation {
@@ -54,12 +79,10 @@ body{
   }
   
   .swiper {
-    animation: rightAnimation 5s ease-in-out infinite;
+    animation: rightAnimation 15s ease-in-out infinite;
   }
 
   .glow-on-hover {
-    width: 220px;
-    height: 50px;
     border: none;
     outline: none;
     color: #fff;
@@ -104,14 +127,28 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #7054e6;
+    background: var(--color-eclipse);
     left: 0;
     top: 0;
     border-radius: 10px;
 }
 
-@keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
+.comment::after{
+  position: absolute;
+  left: -30px;
+  top: 0px;
+  width: 100%;
+  height: calc(100% - 20px);
+  content: "";
+  border: 1px solid #0aa6d7;
+  border-radius: 15px;
+  transition: all 500ms ease;
+  z-index: -1;
+}
+.slick-dots li.slick-active button:before{
+  color:var(--color-shiny);
+  font-size: 8px;
+}
+.slick-dots {
+bottom:-50px
 }
