--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,31 @@
-@import "slick-carousel/slick/slick.css";
-@import "slick-carousel/slick/slick-theme.css";
 @import "tailwindcss";
 @theme {
   --color-lighting: #f2f6f9;
-  --color-darkness:#2a322d;
-  --color-shiny:#0aa6d7;
-  --color-stroke:#7acde9;
-  --color-older:#f1f7f7;
-  --color-off:#f4f5f5;
-  --color-eclipse:#ef5c72;
+  --color-darkness: #2a322d;
+  --color-shiny: #0aa6d7;
+  --color-stroke: #7acde9;
+  --color-older: #f1f7f7;
+  --color-off: #f4f5f5;
+  --color-eclipse: #ef5c72;
   --font-inter: "Inter", "sans-serif";
   --font-courgette: "Courgette", "cursive";
-  --breakpoint-3xl:1680px;
+  --breakpoint-3xl: 1680px;
 }
 
-body,html{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    position: relative;
-    font-family: 'Inter', sans-serif;
-    scroll-behavior: auto;
-    scroll-behavior: smooth;
-    scroll-snap-type: none;
-  }
-  body::-webkit-scrollbar {
-    display: none;
-  }
+body,
+html {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  font-family: "Inter", sans-serif;
+  scroll-behavior: auto;
+  scroll-behavior: smooth;
+  scroll-snap-type: none;
+}
+body::-webkit-scrollbar {
+  display: none;
+}
 
 html {
   scroll-snap-type: y mandatory;
@@ -37,105 +36,107 @@ main {
   scroll-snap-stop: always;
 }
 
-.hero-bg{
-    background-image:url("./images/hero-bg.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position:center;
+.hero-bg {
+  background-image: url("./images/hero-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
-.about-bg{
-    background-image:url("./images/abstract/icon-dotted-map-2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+.about-bg {
+  background-image: url("./images/abstract/icon-dotted-map-2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
-.comment-bg{
-  background-image:url("./images/abstract/cover-comment.png");
+.comment-bg {
+  background-image: url("./images/abstract/cover-comment.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
 @keyframes floatAnimation {
-    0%, 100% {
-      transform: translateY(-10px);
-    }
-    50% {
-      transform: translateY(20px);
-    }
+  0%,
+  100% {
+    transform: translateY(-10px);
   }
-  
-  .animated {
-    animation: floatAnimation 5s ease-in-out infinite;
+  50% {
+    transform: translateY(20px);
   }
+}
 
-  @keyframes rightAnimation {
-    0%, 100% {
-      transform: translateX(0);
-    }
-    50% {
-      transform: translateX(150px);
-    }
-  }
-  
-  .swiper {
-    animation: rightAnimation 15s ease-in-out infinite;
-  }
+.animated {
+  animation: floatAnimation 5s ease-in-out infinite;
+}
 
-  .glow-on-hover {
-    border: none;
-    outline: none;
-    color: #fff;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    border-radius: 10px;
+@keyframes rightAnimation {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(150px);
+  }
+}
+
+.swiping {
+  animation: rightAnimation 15s ease-in-out infinite;
+}
+
+.glow-on-hover {
+  border: none;
+  outline: none;
+  color: #fff;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
 }
 
 .glow-on-hover:before {
-    content: '';
-    background: linear-gradient(45deg, #ef5c72, #ff7300, #7054e6, #f89321, #00ffd5, #00c7c4, #7a00ff, #ff00c8, #ef5c72);
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    opacity: 0;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
+  content: "";
+  background: linear-gradient(45deg, #ef5c72, #ff7300, #7054e6, #f89321, #00ffd5, #00c7c4, #7a00ff, #ff00c8, #ef5c72);
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
 }
 
 .glow-on-hover:active {
-    color: #000
+  color: #000;
 }
 
 .glow-on-hover:active:after {
-    background: transparent;
+  background: transparent;
 }
 
 .glow-on-hover:hover:before {
-    opacity: 1;
+  opacity: 1;
 }
 
 .glow-on-hover:after {
-    z-index: -1;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: var(--color-eclipse);
-    left: 0;
-    top: 0;
-    border-radius: 10px;
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: var(--color-eclipse);
+  left: 0;
+  top: 0;
+  border-radius: 10px;
 }
 
-.comment::after{
+.comment::after {
   position: absolute;
-  left: -30px;
+  left: -25px;
   top: 0px;
   width: 100%;
   height: calc(100% - 20px);
@@ -145,10 +146,37 @@ main {
   transition: all 500ms ease;
   z-index: -1;
 }
-.slick-dots li.slick-active button:before{
-  color:var(--color-shiny);
-  font-size: 8px;
+/* .swiper-pagination-bullet-active {
+  background: var(--color-shiny) !important;
 }
-.slick-dots {
-bottom:-50px
+.swiper-pagination {
+  left: 80px !important;
+  bottom: -6px !important;
+} */
+@media (width < 640px) {
+  .swiper-pagination {
+    left: 0px !important;
+    bottom: px !important;
+  }
+}
+
+.swiper-pagination {
+  position: relative !important;
+  margin-top: 20px;
+}
+.swiper-pagination-bullet{
+  width: 30px !important;
+  height: 30px !important;
+  padding-top: 3px;
+  opacity: 1 !important;
+  background: white !important;
+  border: 2px solid var(--color-eclipse);
+  color: var(--color-darkness);
+  font-weight: 600;
+  text-align: center;
+}
+.swiper-pagination-bullet-active{
+  background-color: var(--color-eclipse) !important;
+  color: white;
+  
 }
