--- a/src/index.css
+++ b/src/index.css
@@ -125,7 +125,7 @@ main {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: var(--color-eclipse);
+  background: var(--color-shiny);
   left: 0;
   top: 0;
   border-radius: 10px;
@@ -138,7 +138,7 @@ main {
   width: 100%;
   height: calc(100% - 20px);
   content: "";
-  border: 2px solid var(--color-eclipse);
+  border: 2px solid var(--color-shiny);
   border-radius: 15px;
   transition: all 500ms ease;
   z-index: -1;
@@ -161,13 +161,13 @@ main {
   padding-top: 3px;
   opacity: 1 !important;
   background: white !important;
-  border: 2px solid var(--color-eclipse);
+  border: 2px solid var(--color-shiny);
   color: var(--color-darkness);
   font-weight: 600;
   text-align: center;
 }
 .swiper-pagination-bullet-active {
-  background-color: var(--color-eclipse) !important;
+  background-color: var(--color-shiny) !important;
   color: white;
 }
 
